--- a/templates/login.html
+++ b/templates/login.html
@@ -2,16 +2,55 @@
 
 {% block content %}
 <h1>Личный кабинет приюта - {{name_account}}</h1>
-<div class="login">  
-    <a href="#" data-bs-target="#CreateCardShelter" id="form_create_card_shelter" data-bs-toggle="modal">Создать карточку</a>
-    <a href="#" data-bs-target="#CreateCardAnimal" id="form_create_card_animal" data-bs-toggle="modal">Добавить карточку животного</a>
-    <a href="#" data-bs-target="#CreateNews" id="form_create_news_shelter" data-bs-toggle="modal">Разместить новость</a>
-    <a href="#">Подать отсчет за месяц</a>
-    <a href="#"  data-bs-target="#CreateNewDate" id="form_date_visits" data-bs-toggle="modal">Расписание посещений</a>
-    <a href="#">Срочные запросы</a>
-    <a href="#">Бюджет расходов в месяц</a>
-    <a href="#">Убыло животных</a>
-    <a href="#">Прибыло животных</a>
+<div class="login container-fluid row">
+    <div class="login-card col">
+        <a class="login-button" href="#" data-bs-target="#CreateCardShelter" id="form_create_card_shelter" data-bs-toggle="modal">Карточка приюта</a>
+        <h3>Ваша карточка приюта:</h3>
+        <p><span>Имя</span> - {{shelter.name}}</p>
+        <p><span>Город и адрес</span> - {{shelter.city}} {{shelter.address}}</p>
+        <p><span>Описание</span> - {{shelter.about}}</p>
+        <p><span>Имя директора</span> - {{shelter.director_name}}</p>
+        <p><span>Контакты</span> - {{shelter.contact}}</p>
+        <p><span>Реквизиты</span> - {{shelter.requisites}}</p>
+        <p><span>Социальные сети</span> - {{shelter.social_network}}</p>
+    </div>
+    <div class="login-card col">
+        <a class="login-button" href="#" data-bs-target="#CreateCardAnimal" id="form_create_card_animal" data-bs-toggle="modal">Добавить карточку животного</a>
+        <h3>Всего животных - {{shelter.number_of_animals}}</h3>
+        {% for name in collection %}
+          <p><a href="/help/{{name.id}}" target="_blank">{{name}}</a> 
+              <!-- <form action="{% url 'login' rights %}" class="form" method="POST">
+                {% csrf_token %} -->
+                <a href="#" style="color:red"> (Удалить)</a>
+              <!-- </form> -->
+          </p>
+        {% endfor %}
+    </div>
+    <div class="login-card col">
+        <a class="login-button" href="#" data-bs-target="#CreateNews" id="form_create_news_shelter" data-bs-toggle="modal">Разместить новость</a>
+        <h3>Ваши новоти</h3>
+        {% for news in shelter.news.all %}
+          {{news.name_news}}<br>
+        {% endfor %}
+    </div>
+    <div class="login-card col">
+        <a class="login-button" href="#" data-bs-target="#BudgetMonth" id="form_budget_month" data-bs-toggle="modal">Бюджет расходов в месяц</a>
+    </div>
+    <div class="login-card col">
+        <a class="login-button" href="#" data-bs-target="#ReportMonth" id="form_new_shelter_report" data-bs-toggle="modal">Подать отчет за месяц</a>
+    </div>
+    <div class="login-card col">
+      <a class="login-button" href="#" data-bs-target="#HotEmail" id="form_hot_email" data-bs-toggle="modal">Срочные запросы</a>
+    </div>
+    <div class="login-card col">
+      <a class="login-button" href="#" data-bs-target="#CreateNewDate" id="form_date_visits" data-bs-toggle="modal">Расписание посещений</a>
+    </div>
+    <!-- <div class="login-card col">
+        <a href="#">Убыло животных</a>
+    </div>
+    <div class="login-card col">
+        <a href="#">Прибыло животных</a>
+    </div> -->
 </div>
 <div class="modal fade" id="CreateCardAnimal" name="all_forms" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="CreateCardAnimalLabel" aria-hidden="true">
     <div class="modal-dialog">
@@ -38,5 +77,8 @@
 <div id="FORM_form_create_card_shelter" style="display: none">{{form_create_card_shelter}}</div>
 <div id="FORM_form_create_news_shelter" style="display: none">{{form_create_news_shelter}}</div>
 <div id="FORM_form_create_card_animal" style="display: none">{{form_create_card_animal}}</div>
+<div id="FORM_form_budget_month" style="display: none">{{form_budget_month}}</div>
+<div id="FORM_form_new_shelter_report" style="display: none">{{form_new_shelter_report}}</div>
+<div id="FORM_form_hot_email" style="display: none">{{form_hot_email}}</div>
 <div id="FORM_form_date_visits" style="display: none">{{form_date_visits}}</div>
 {% endblock %}
