--- a/templates/base.html
+++ b/templates/base.html
@@ -12,10 +12,9 @@
         <title>Fund</title>
     </head>
     <body>
-        <p>Please, use the following form to log-in. If you don't have an account <a href="{% url 'registry' %}">register here</a></p>
         <div class="container-fluid">
             <div class="row menu_header">
-                <a href="#" class="col-1"><img class="logo" src="/static/img/logo.png"/></a>
+                <a href="/" class="col-1"><img class="logo" src="/static/img/logo.png"/></a>
                 <div class="col-1"></div>
                 <a href="{% url 'support' %}" class="col-2 button">Стать спонсором</a>
                 <div class="col-6"></div>
