--- a/static/css/styles.scss
+++ b/static/css/styles.scss
@@ -1,5 +1,13 @@
+$main_color: #7200e0;
+$secondary_color: blue;
+
+$first_font_size: 16px;
+$second_font_size: 18px;
+$third_font_size: 24px;
+
+
 .site-button{
-    background-color: blue;
+    background-color: $main_color;
     text-align: center;
     padding: 10px 30px;
     text-decoration: none;
@@ -29,7 +37,7 @@
     .button{
         height: 10%;
         color: white;
-        background-color: blue;
+        background-color: $main_color;
     }
 
     .button:hover{
@@ -86,7 +94,7 @@
             .left{
                 .persent{
                     margin-bottom: 0px;
-                    color: blue;
+                    color: $main_color;
                     font-size: 18px;
                     font-weight: 500;
                 }
@@ -116,7 +124,7 @@
         }
 
         .background{
-            background-color: blue;
+            background-color: $main_color;
             z-index: 2;
             width: 100%;
             height: 100%;
@@ -127,6 +135,87 @@
             z-index: 3;
             display: block;
         }
+    }
+}
+
+.main-big-text{
+    font-size: 48px;
+}
+
+.main-button{
+    margin: 0 auto;
+    text-align: center;
+}
+
+.main-button a{
+    padding: 10px 20px;
+    border: 1px solid $main_color;
+    border-radius: 5px;
+    text-decoration: none;
+    text-align: center;
+    color: $main_color;
+    font-size: $second_font_size;   
+}
+
+.how-help{
+    margin-top: 5vw;
+    background-color: rgba(247, 222, 77, 0.2);
+    padding: 10vw;
+}
+
+.small-post-help{
+    div{
+        text-align: center;
+        margin: 0 auto;
+
+        div{
+            background-color: rgba(114, 177, 255, 0.2);
+            padding: 20px;
+            border-radius: 300px;
+            width: 100px;
+            height: 100px;
+
+            img{
+                width: 100%;
+                margin-top: 12px;
+            }
+        }        
+    }
+}
+
+.teke-animal-home{
+    margin-top: 20px;
+    height: 200px;
+
+    .col-4{
+        img{
+            background-color: $main_color;
+            border-radius: 100px;
+        }
+    }
+
+    .col-8{
+        margin: auto 0;
+    }
+}
+
+.main-text-take-home{
+    font-size: $third_font_size;
+    color: $main_color;
+}
+
+.text-take-home{
+    font-size: $second_font_size;
+}
+
+.last-help-list{
+    background-color: white;
+    padding: 20px;
+    border-radius: 15px;
+
+    .line-help-main-text{
+        text-align: center;
+        font-size: $third_font_size;
     }
 }
 
@@ -158,12 +247,12 @@
 
 .help_money{
     width: 60%;
-    border: 1px solid blue;
+    border: 1px solid $main_color;
     box-shadow: 0px 0px 5px black;
     padding: 2%;
 
     .main{
-        color: blue;
+        color: $main_color;
         font-size: 18px;
         font-weight: 500;
         margin-bottom: 0px;
@@ -174,12 +263,12 @@
     }
 
     .input_money{
-        border: 1px solid blue;
+        border: 1px solid $main_color;
         border-radius: 5px;
     }
 
     // .send_money{
-    //     background-color: blue;
+    //     background-color: $main_color;
     //     text-align: center;
     //     padding: 10px 30px;
     //     text-decoration: none;
@@ -195,7 +284,7 @@
 }
 
 .support{
-    border: 1px solid blue;
+    border: 1px solid $main_color;
     border-radius: 5px;
     padding: 10px 10px 40px 10px;
     width: 30% !important;
@@ -209,7 +298,7 @@
     }
 
     .money_summ_view{
-        background-color: blue;
+        background-color: $main_color;
         text-align: center;
         padding: 20px 50px;
         text-decoration: none;
@@ -235,7 +324,7 @@
     .login-card{
         padding: 20px;
         border-radius: 5px;
-        border: 1px solid blue;
+        border: 1px solid $main_color;
         margin: 20px;
         text-align: center;
 
@@ -259,7 +348,7 @@
 
         .login-button{
             white-space: nowrap;
-            background-color: blue;
+            background-color: $main_color;
             color: white;
             text-decoration: none;
             padding: 20px 40px;
@@ -284,7 +373,7 @@
 
     input, select, textarea{
         height: 30px;
-        border: 2px solid blue;
+        border: 2px solid $main_color;
         border-radius: 5px;
         margin-bottom: 10px;
     }
@@ -301,10 +390,15 @@
     .all_card{
         margin: 20px 0;
         padding: 10px;
-        border: 1px solid blue;
+        border: 1px solid $main_color;
         border-radius: 10px;
         box-shadow: inset 0px 0px 5px black;
     }
+}
+
+#id_date_visits{
+    height: 180px !important;
+    white-space: pre-wrap !important;
 }
 
 @media screen and (min-width: 540px) {
