--- a/templates/index.html
+++ b/templates/index.html
@@ -5,30 +5,85 @@
 {% block content %}
 <div class="container-fluid cards row g-5">
     {% for card in collection %}
-    <a href="help/{{card.id}}" class="card col-3 col-offset-2">
-        <div class="img">
-            <img class="w-100" src="/static/img/header.jpg">
-            <div class="background"></div>
-            <p class="post_text">Поддержать проект</p>
-        </div>
-        <div class="p-3">
-            <p class="name">{{card.name}}</p>
-            <p class="text">{{card.comment}}</p>
-            <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: {% persent card.summ_now card.summ %}%" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100">{% persent card.summ_now card.summ %}%</div>
+    <div class=" col-3 col-offset-2">
+        <a href="help/{{card.id}}" class="card">
+            <div class="img">
+                <img class="w-100" src="/static/img/header.jpg">
+                <div class="background"></div>
+                <p class="post_text">Поддержать проект</p>
             </div>
-            <div class="info">
-                <div class="left">
-                    <p class="persent">{% persent card.summ_now card.summ %} %</p>
-                    <p class="info_text">Идет сбор {{card.summ}}</p>
+            <div class="p-3">
+                <p class="name">{{card.name}}</p>
+                <p class="text">{{card.comment}}</p>
+                <div class="progress">
+                    <div class="progress-bar" role="progressbar" style="width: {% persent card.summ_now card.summ %}%" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100">{% persent card.summ_now card.summ %}%</div>
                 </div>
-                <div class="right">
-                    <p class="summ">{{card.summ_now}} ₽</p>
-                    <p class="info_text">Собрано</p>
-                </div>
-            </div> 
-        </div>
-    </a>
+                <div class="info">
+                    <div class="left">
+                        <p class="persent">{% persent card.summ_now card.summ %} %</p>
+                        <p class="info_text">Идет сбор {{card.summ}}</p>
+                    </div>
+                    <div class="right">
+                        <p class="summ">{{card.summ_now}} ₽</p>
+                        <p class="info_text">Собрано</p>
+                    </div>
+                </div> 
+            </div>
+        </a>
+    </div>
     {% endfor %}
+    <div class="main-button"><a href="#">Показать остальных:</a></div>
+</div>
+<div class="how-help">
+    <p class="main-big-text">Как помогать животным</p>
+    <div class="row">
+        <div class="col-8">
+            <div class="row small-post-help">
+                <div class="col">
+                    <div>
+                        <img src="/static/img/imgForSite/helping_animals_with_food.svg">
+                    </div>
+                    <p>Кормить</p>
+                </div>
+                <div class="col">
+                    <div>
+                        <img src="/static/img/imgForSite/helping_animals_with_food.svg">
+                    </div>
+                    <p>Ухаживать</p>
+                </div>
+                <div class="col">
+                    <div>
+                        <img src="/static/img/imgForSite/helping_animals_with_food.svg">
+                    </div>
+                    <p>Лечить</p>
+                </div>
+                <div class="col">
+                    <div>
+                        <img src="/static/img/imgForSite/helping_animals_with_food.svg">
+                    </div>
+                    <p>Побаловать</p>
+                </div>
+                <div class="col">
+                    <div>
+                        <img src="/static/img/imgForSite/helping_animals_with_food.svg">
+                    </div>
+                    <p>Навестить</p>
+                </div>
+            </div>
+            <div class="row teke-animal-home">
+                <div class="col-4">
+                    <img src="/static/img/imgForSite/take-home.svg">    
+                </div>
+                <div class="col-8">
+                    <p class="main-text-take-home">Забрать домой</p>
+                    <p class="text-take-home">Вы можете бесконечно кормить, дарить приятные вещи и лечить питомца, но только забрав домой вы сможете по-настоящему помочь ему.</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-4 last-help-list">
+            <p class="line-help-main-text">Лента помощи</p>
+        </div>        
+    </div>
+
 </div>
 {% endblock %}
