--- a/templates/helpPage.html
+++ b/templates/helpPage.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="row" style="margin-right: 0">
+<section class="row mt-5" style="margin-right: 0">
     <div id="carouselExampleControls" class="container carousel slide help_carousel col-5" data-bs-ride="carousel">
         <div class="carousel-inner">
         <div class="carousel-item active">
@@ -61,7 +61,7 @@
             <p class="what_is_send_money">На что пойдут деньги <a href="#">узнать</a></p>
         </div>
     </div>
-</div>
+</section>
 
 
 {% endblock %}
