--- a/templates/registry.html
+++ b/templates/registry.html
@@ -4,7 +4,9 @@
 <div>
     {% for shelter in shelterAll %}
     <ul>
-        <li><a href="#">{{shelter.city}}</a> Коты: 2, Собаки: 3</li>
+        <li>
+            <a href="#">{{shelter.city}}</a> Коты: 2, Собаки: 3
+        </li>
     </ul>
     {% endfor %}
 </div>
