--- a/templates/support.html
+++ b/templates/support.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="container-fluid support">
+<div class="container-fluid support mt-5">
     <p>Поддержать на любую сумму</p>
     <p style="font-size: 14px; color: gray">Спасибо, мне не нужно вознаграждение, я просто хочу поддержать проект.</p>
     <div class="dropdown support_shelter">
