--- a/templates/shelters.html
+++ b/templates/shelters.html
@@ -6,6 +6,19 @@
     <a href="{% url 'shelters_news' shelter.name shelter.id %}">
         <div class="all_card">
             <h2>{{shelter.name}}</h2>
+            <div class="main-info d-flex">
+                <div class="shelter-img">
+                    <img class="w-100" src="{{shelter.logo}}">
+                </div>
+                <div style="margin-left: 20px">
+                    <p><span>Описание: </span>{{shelter.about}}</p>                    
+                    <p><span>Адрес: </span>{{shelter.city}} {{shelter.address}}</p>                    
+                    <p><span>Директор: </span>{{shelter.director_name}}</p>                    
+                    <p><span>Контакты: </span>{{shelter.contact}}</p>                    
+                    <p><span>Социальные сети: </span>{{shelter.social_network}}</p>                  
+                    <p><span>Всего животных: </span>{{shelter.number_of_animals}}</p>                  
+                </div>               
+            </div>
         </div>        
     </a>
     {% endfor %}
