--- a/templates/helpPage.html
+++ b/templates/helpPage.html
@@ -5,13 +5,13 @@
     <div id="carouselExampleControls" class="container carousel slide help_carousel col-5" data-bs-ride="carousel">
         <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="/static/img/header.jpg"" class="d-block w-100" alt="...">
+            <img src="/{{animal.photo}}" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-            <img src="/static/img/header.jpg"" class="d-block w-100" alt="...">
+            <img src="/static/img/header.jpg" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-            <img src="/static/img/header.jpg"" class="d-block w-100" alt="...">
+            <img src="/static/img/header.jpg" class="d-block w-100" alt="...">
         </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"  data-bs-slide="prev">
