--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
     <div class=" col-3 col-offset-2">
         <a href="help/{{card.id}}" class="card">
             <div class="img">
-                <img class="w-100" src="/static/img/header.jpg">
+                <img class="w-100" src="/{{card.photo}}">
                 <div class="background"></div>
                 <p class="post_text">Поддержать проект</p>
             </div>
