--- a/templates/allAnimals.html
+++ b/templates/allAnimals.html
@@ -31,7 +31,7 @@
     <div class="col-3 col-offset-2 card_animal" name="{{card.choice_shelter}}+{{card.city}}">
         <a href="help/{{card.id}}" class="card">
             <div class="img">
-                <img class="w-100" src="/static/img/header.jpg">
+                <img class="w-100" src="/{{card.photo}}">
                 <div class="background"></div>
                 <p class="post_text">Поддержать проект</p>
             </div>
